# eggine-rust

./: .gitignore  Cargo.toml
renderer/: Cargo.toml
renderer/src/: bin.rs  lib.rs  renderer.rs  state.rs
renderer/src/boss/: boss.rs  debug_context.rs  mod.rs  wgpu_context.rs
renderer/src/memory_subsystem/: memory.rs  mod.rs  node.rs  page.rs  texture_structure.rs
renderer/src/memory_subsystem/textures/: error.rs  gpu_pager.rs  mod.rs  pager.rs  quad_tree.rs  state.rs  texture.rs  virtual_pager.rs
renderer/src/pass/: pass.rs
renderer/src/shaders/: compute_program.rs  mod.rs  program.rs  shader.rs  shader_table.rs  uniform.rs
renderer/src/shape/: batch_parameters.rs  mod.rs  shape.rs  shape_blueprint.rs  shape_buffer.rs  triangulator.rs
renderer/src/shape/blueprint/: blueprint.rs  data_kind.rs  error.rs  mesh.rs  mod.rs  state.rs
renderer/src/shape/blueprint2/: blueprint.rs  material.rs  mesh.rs  mesh_primitive.rs  mod.rs  state.rs
renderer/src/shapes/: animation_context.rs  batch_parameters.rs  mod.rs  shape.rs
renderer/src/shapes/animations/: blending.rs  context.rs  mod.rs  play_count.rs  timescale.rs
renderer/src/shapes/blueprint/: animation.rs  blueprint.rs  bone.rs  data_kind.rs  material.rs  mesh.rs  mesh_primitive.rs  mod.rs  node.rs  state.rs
renderer/src/shapes/blueprint/helpers/: animation.rs  integer.rs  matrix.rs  (+3 more)
renderer/src/testing/: batch.rs  indirect_pass.rs  mod.rs  uniforms.rs
renderer/src/testing/depth_visualizer/: mod.rs  visualizer_pass.rs
renderer/src/testing/indirect_pass/: batches.rs  buffer_generation.rs  depth_prepass.rs  depth_pyramid.rs  g_buffer_pass.rs  indirect_pass.rs  mod.rs  uniforms.rs
renderer/src/testing/indirect_pass2/: batches.rs  buffer_generation.rs  depth_prepass.rs  depth_pyramid.rs  g_buffer_pass.rs  mod.rs
renderer/src/textures/: mod.rs  state.rs  texture.rs
(+86 files in other folders)
