[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
bytemuck = { features = ["derive"], version = "1.13.0" }
carton = { path = "../carton" }
fbxcel-dom = "0.0.10"
glam = { features = ["bytemuck"], version = "0.22.0" }
rand = "0.8.5"
streams = { path = "../streams" }
tokio = { features = ["full"], version = "1.22.0" }
wgpu = { features = ["spirv"], path = "../../wgpu/wgpu" }
winit = "0.28.1"

[lib]
name = "renderer"
path = "src/lib.rs"

[[bin]]
name = "rendererbin"
path = "src/bin.rs"
